# Blender-Web-Streaming

./: .gitignore  README.md  requirements_cefpython.txt  requirements_pyppeteer.txt  requirements_pyqt.txt
blender_web/: __init__.py  auto_load.py  gz_cefpython.py  modal_cefpython.py  modal_pyppeteer.py  modal_pyqt.py  shaders.py
blender_web/ackit/: auto_load.py  globals.py
blender_web/ackit/_register/: __init__.py  _register.py  override_cache.py
blender_web/ackit/bcy/: __init__.py  aregion.py  vec_types.py  view2d.py
blender_web/ackit/gz/: __init__.py  gz.py  gzg.py
blender_web/ackit/utils/: get_image_size.py  gpu.py
blender_web/html/: color_picker.html
blender_web/scripts/: bws_cefpython.py  bws_pyppeteer.py  bws_pyqt.py  color_picker.html  extract_svgator.js  test.js  test_web.html
blender_web/utils/: armature.py  callback_set.py  cursor.py  file.py  geometry.py  iter.py  math.py  node_editor.py  operator.py  ui_layout.py  view3d.py
blender_web/utils/event/: __init__.py  event_enums.py  event_globals.py  mouse.py
bws_cef/: .gitignore  CMakeLists.txt  make.bat
bws_cef/src/: event_handle.cpp  main.cpp
bws_electron/: main.js  package-lock.json  package.json
bws_go/: bws_go.go
bws_java/: Screenshot.java  SharedMemoryUtils.java
scripts/: blender_ui_renderer.py  bws_server.py  custom_page.html  ui_renderer.py  web_renderer.py  web_renderer_v1.py  web_renderer_v2.py
scripts/qtwebengine_cache/: Visited Links  user_prefs.json
scripts/qtwebengine_cache/GPUCache/: data_1  index
scripts/qtwebengine_cache/Platform Notifications/: LOG
(+27 files in other folders)
